initalize html/css

--- a/color-splash.html
+++ b/color-splash.html
@@ -9,5 +9,25 @@
 </head>
 <body>
 
+	<div id="color-splash">
+		<table id="playground">
+		</table>
+
+		<div id="color-buttons">
+			<div class="color-button" data-color="blue"></div>
+			<div class="color-button" data-color="red"></div>
+			<div class="color-button" data-color="green"></div>
+			<div class="color-button" data-color="yellow"></div>
+			<div class="color-button" data-color="purple"></div>
+			<div class="color-button" data-color="orange"></div>
+		</div>
+	</div>
+
+	<script>
+		$(document).ready(function() {
+
+		});
+	</script>
+
 </body>
 </html>
