playground can be initialized and colors are added

--- a/color-splash.html
+++ b/color-splash.html
@@ -25,7 +25,10 @@
 
 	<script>
 		$(document).ready(function() {
+			var colorSplash = new ColorSplash($('#color-splash'));
 
+			colorSplash.initialize(4);
+			
 		});
 	</script>
 
