re-organized project structure

--- a/color-splash.html
+++ b/color-splash.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <title>COLOR SPLASH</title>
 <script type="text/javascript" src="./lib/jquery.min.js"></script>
-<script type="text/javascript" src="./color-splash.js"></script>
-<link href="./color-splash.css" rel="stylesheet">
+<script type="text/javascript" src="./src/js/color-splash.js"></script>
+<link href="./src/css/color-splash.css" rel="stylesheet">
 </head>
 <body>
 
