adapt test-file after moving playground to separate JS file

--- a/spec/TestPlayground.html
+++ b/spec/TestPlayground.html
@@ -12,7 +12,8 @@
   <script src="./../lib/jasmine-2.5.2/boot.js"></script>
   <script src="./../lib/jquery.min.js"></script>
 
-  <!-- include source files here... -->  
+  <!-- include source files here... -->
+  <script src="./../src/js/playground.js"></script>
   <script src="./../src/js/color-splash.js"></script>
   
 
