fix #8: add reset-button which adds resets the game to the initial state

--- a/color-splash.html
+++ b/color-splash.html
@@ -4,15 +4,19 @@
 <meta charset="UTF-8">
 <title>COLOR SPLASH</title>
 <script type="text/javascript" src="./lib/jquery.min.js"></script>
+<script type="text/javascript" src="./src/js/settings-buttons.js"></script>
 <script type="text/javascript" src="./src/js/playground.js"></script>
 <script type="text/javascript" src="./src/js/color-splash.js"></script>
 <link href="./src/css/color-splash.css" rel="stylesheet">
 </head>
 <body>
-
 	<div id="color-splash">
 		<table id="playground">
 		</table>
+
+		<div id="settings">
+			<button class="reset-button">Reset</button>
+		</div>
 
 		<div id="color-buttons">
 			<div class="color-button" data-color="blue"></div>
