--- a/spec/TestPlayground.html
+++ b/spec/TestPlayground.html
@@ -13,6 +13,7 @@
   <script src="./../lib/jquery.min.js"></script>
 
   <!-- include source files here... -->
+  <script src="./../src/js/settings-buttons.js"></script>
   <script src="./../src/js/playground.js"></script>
   <script src="./../src/js/color-splash.js"></script>
   
